--- a/css/style.css
+++ b/css/style.css
@@ -1,176 +1,240 @@
-
-/* GLOBAL */
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,500;0,700;0,900;1,500;1,700;1,900&display=swap");
 
 :root {
-    --pale-blue: hsl(225, 100%, 94%);
-    --bright-blue: hsl(245, 75%, 52%);
-    --very-pale-blue: hsl(225, 100%, 98%);
-    --desaturated-blue: hsl(224, 23%, 55%);
-    --dark-blue: hsl(223, 47%, 23%);
+  --ff-main: "Red Hat Display", sans-serif;
+
+  --pale-blue: hsl(225, 100%, 94%);
+  --bright-blue: hsl(245, 75%, 52%);
+
+  --very-pale-blue: hsl(225, 100%, 98%);
+  --desaturated-blue: hsl(224, 23%, 55%);
+  --dark-blue: hsl(223, 47%, 23%);
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
 
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* GLOBAL */
+
+/* Set core body defaults */
 body {
-    font-family: 'Red Hat Display', sans-serif;
-    background-color: var(--pale-blue);
+  text-rendering: optimizeSpeed;
+  line-height: 1.6;
+
+  font-size: 1rem;
+  font-family: var(--ff-main);
+
+  background-color: var(--pale-blue);
+  background-image: url(../images/pattern-background-mobile.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: top;
+}
+@media screen and (min-width: 1000px) {
+  body {
+    background-image: url(../images/pattern-background-desktop.svg);
+    background-position-y: -5px;
+  }
+}
+.text-align {
+  text-align: center;
 }
 
-p {
-    font-size: 16px;
-    line-height: 1.5;
+.card {
+  overflow: hidden;
+  background-color: #fff;
+  width: min(87%, 450px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 0 auto;
+  margin-top: 4.5rem;
+
+  border-radius: 1rem;
+}
+@media screen and (min-width: 1000px) {
+  .card {
+    margin-top: 6.2rem;
+  }
 }
 
-/* TOP HALF */
-
-.top {
-    width: 100%;
-    margin: 0 auto;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+.card__bottom {
+  /* padding: clamp(1.5rem, 4vw, 3rem); */
+  padding: 1.5rem;
+  padding-top: 1.7rem;
+}
+@media screen and (min-width: 600px) {
+  .card__bottom {
+    padding: 2.5rem;
+    padding-top: 2rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .card__bottom {
+    padding: 3rem;
+    padding-top: 2.75rem;
+  }
 }
 
-.top img {
-    width: 100%;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+.card__header h1 {
+  /* font-size: clamp(1.4rem, 5vw, 1.75rem); */
+  font-size: 1.4rem;
+  color: var(--dark-blue);
+  font-weight: 900;
+}
+@media screen and (min-width: 1000px) {
+  .card__header h1 {
+    font-size: 1.75rem;
+  }
 }
 
-/* BOTTOM HALF */
+.card__header p {
+  color: var(--desaturated-blue);
+  font-size: clamp(0.95rem, 4vw, 1rem);
+  width: 90%;
+  margin: 0 auto;
 
-.container {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    background-color: #fff;
-    margin: 5rem auto;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    box-shadow: 5px 10px 10px hsl(221, 29%, 80%);
-    width: 88%;
-    max-width: 375px;
+  margin-top: 1rem;
+}
+@media screen and (min-width: 1000px) {
+  .card__header p {
+    margin-top: 0.6rem;
+  }
 }
 
-.summary {
-    text-align: center;
-    margin-top: 2rem;
+.card__plan {
+  margin-top: 1.4rem;
+
+  display: flex;
+  background-color: var(--very-pale-blue);
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.1rem;
+  border-radius: 1rem;
+}
+@media screen and (min-width: 1000px) {
+  .card__plan {
+    padding: 1.6rem;
+  }
 }
 
-.summary h1 {
-    color: var(--dark-blue);
-    font-weight: 900;
-    font-size: 2rem;
+.plan--left {
+  display: flex;
 }
 
-
-.desc p {
-    margin-top: 1rem;
-    color: var(--desaturated-blue);
-    text-align: center;
-    font-size: 1rem;
+.plan--left img {
+  margin-right: 1rem;
 }
 
-.plan {
-    align-items: center;
-    margin: 1rem auto;
-    background-color: var(--very-pale-blue);
-    width: 90%;
-    display: flex;
-    padding: 1em;
-    border-radius: 1rem;
+.plan--left-text {
+  font-size: clamp(0.9rem, 2vw, 1rem);
 }
 
-.icon-music {
-    flex: 1;
+.plan--left-text span {
+  font-weight: 900;
 }
 
-.icon-music img {
-    display: block;
+.plan--left-text p {
+  color: var(--desaturated-blue);
 }
 
-.price {
-    flex: 4;
-    text-align: center;
+.plan--right a {
+  font-weight: 900;
+  font-size: 0.9rem;
 }
 
-.change {
-    flex: 2;
-    text-align: right;
-}
-
-.price h4 {
-    color: var(--dark-blue);
-    font-size: 1rem;
-}
-
-.price p {
-    color: var(--desaturated-blue);
-}
-
-
- /* BUTTONS */
-
-button {
-    border: none;
-    border-radius: 10px;
-    font-family: inherit;
-}
-
-button:hover {
-    opacity: .8;
-}
-
-.btn-change {
-    background-color: transparent;
-    text-decoration: underline;
-    color: var(--bright-blue);
-    font-weight:700;
-}
-
-
-
-.btn-primary {
-    display: flex;
-    flex-direction: column;
+.payment {
+  display: flex;
+  flex-direction: column;
 }
 
 .btn-large {
-    width: 90%;
-    padding: 1rem;
-    margin: 1rem auto;
-    background-color: var(--bright-blue);
-    color: #fff;
-    font-weight: 700;
-    font-size: 1rem;
-    box-shadow: 5px 10px 10px hsl(221, 29%, 80%);
+  border: none;
+  background-color: var(--bright-blue);
+  color: #fff;
+  padding: 0.8rem;
+  font-weight: 500;
+
+  border-radius: 0.8rem;
+
+  margin-top: 1.6rem;
 }
 
 .btn-small {
-    width: 50%;
-    margin: 1rem auto 3rem;
-    background-color: transparent;
-    font-size: 1rem;
-    color: var(--desaturated-blue);
-    font-weight: 700;
+  font-weight: 700;
+  color: var(--desaturated-blue);
+  margin-top: 1.3rem;
+  border: none;
+  background: none;
 }
-
-
-/* ATTRIBUTION */
-
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
-
-/* MEDIA QUERIES */
-
-@media (min-width: 1440px) {
-    body {
-        background: url("../images/pattern-background-desktop.svg") no-repeat center -350px/cover;
-        background-color: var(--pale-blue);
-    }
-
+@media screen and (min-width: 1000px) {
+  .btn-small {
+    margin-top: 1.8rem;
+  }
 }
